gitops/env/dev/apps/auth-service/overlay/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service
spec:
  ingressClassName: traefik
  rules:
    - host: dev.intrachat.local
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
